# st25dv

./: CMakeLists.txt  Kconfig
ST25DV/ST25DV/: st25dv.c  st25dv.h
ST25DV/libNDEF/: lib_NDEF_Handover.c
